Version 2.10.0
- new default for saving: without the option --saveAfter the conllu file is saved whenever a new sentence is chosen (next, prec, ...)
  the old behaviour (save every modification immediately) can be achieved using the topn --saveAfter 1

Version 2.9.1
- correction: replace "\n" in MISC:SpacesAfter= by space in "# text = " line

Version 2.9.0
- options --features and --deprels can read official specifications for valid features and deprels 
  in https://github.com/UniversalDependencies/tools/tree/master/data (features.json and deprels.json)
- new option --language (to read the feature/deprel definitions for a given language (if not given, use only universal features/deprels)
- new option --include_unused (use features declared as unusued for given language)

Version 2.8.2
- help text slightly corrected

Version 2.8.1
- process SpacesBefore correctly
- junit 4.12 -> 4.13.1

Version 2.8.0
- add --compare option to Docker image
- make MISC autocompletion work when editing MTW
- new command to transform existing word in MTW
- new tests

Version 2.7.5
- Warning improved
- bug corrected in MTW creation (delete Space(s)After from MTW member tokens and add value from last memeber token to the MTW token
- put concatenated forms of created MTW to the FORM column of the MTW

Version 2.7.4
- Error if edited file is not controlled under git AND there is already a backup-file (.2) in order to avoid overwriting the output of a preceding editing

Version 2.7.3
- bug corrected when inserting new MTW and serializing MTWs with Space(s)After to CoNLL-U

Version 2.7.2
- search: find word on multiple criteria

Version 2.7.1
- error corrected for sentsplit of sentences with enhanced dependencies and/or empty words
- display roots of enhanced deps (in flat view)
- new test

Version 2.7.0
- add and delete empty words (enhanced dependencies)
- delete normal words

Version 2.6.1
- deleted causes for warnings

Version 2.6.0
- table edit form

Version 2.5.2