@@ -1,6 +1,6 @@
 BSD 3-Clause License
 
-Copyright (c) 2018, Orange S.A.
+Copyright (c) 2018-2021, Orange S.A.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
